--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -143,7 +143,7 @@
                         <% for (i=0; i<data.length; i++){%>
                           <tr>
                           <td><a href="/notescontent?uuid=<%=data[i].uuid%>"><%=data[i].title%></td>
-                          <td><%=data[i].createdAt%></td>
+                          <td><%=data[i].created%></td>
                           <td>
                             <form action="/update?uuid=<%=data[i].uuid%>" method="post">
                               <button type="submit" name="uuid" value="<%=data[i].uuid%>" class="btn btn-secondary">Update</button>
