--- a/views/register.ejs
+++ b/views/register.ejs
@@ -39,7 +39,7 @@
                   <div class="text-center">
                     <h1 class="h4 text-gray-900 mb-4">Pastebin Clone</h1>
                   </div>
-                  <form class="user" method="POST" action="/login">
+                  <form class="user" method="POST" action="/register">
                     <div class="form-group">
                       <input type="text" class="form-control form-control-user" id="username" name="username" aria-describedby="emailHelp" placeholder="Enter Username...">
                     </div>
@@ -47,10 +47,10 @@
                       <input type="password" class="form-control form-control-user" id="password" name ="password" placeholder="Password">
                     </div>
                     <div class="form-group">
-                      <button class="btn btn-primary form-control" type="submit" value="Login">Login</button>
+                      <button class="btn btn-primary form-control" type="submit" value="Register">Register</button>
                     </div>
                   </form>
-                  <a href="/register">Register Here</a>
+                  <a href="/">Login Here</a>
                   <hr>
                 </div>
               </div>
