--- Auto-Git Commit ---

--- a/views/archivednotes.ejs
+++ b/views/archivednotes.ejs
@@ -13,7 +13,7 @@
 
   <!-- Custom fonts for this template-->
   <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-<!--  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">-->
+  <!--  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- Custom styles for this template-->
   <link href="/css/sb-admin-2.min.css" rel="stylesheet">
@@ -54,7 +54,7 @@
           <span>Actions</span></a>
 		  <div id="collapseUtilities" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="noteslist">Notes</a>
+            <a class="collapse-item" href="notes">Notes</a>
             <a class="collapse-item" href="archivednotes">Archived Notes</a>
           </div>
         </div>
@@ -120,17 +120,52 @@
         <!-- End of Topbar -->
         <!-- Begin Page Content -->
         <div class="container-fluid">
-            <div class="card mb-4">
-                <form action="/update" method="post">
-                    <div class="card-header">
-                        <input name="title" value="Title Goes Here">
-                    </div>
-                    <div class="card-body">
-                        <input name="content" value="Content goes here">
-                    </div>
-                    <button type="submit" class="btn btn-success">Update</button>
-                </form>
+          <div>
+            <button class="btn btn-info" data-target="#addModal" data-toggle="modal">Add Notes</button>
+          </div>
+          <!-- DataTales Example -->
+          <div class=" card shadow mb-4 col-lg-12 float-left">
+            <div class="card-header py-3">
+              <h6 class="m-0 font-weight-bold text-primary">Content Table</h6>
             </div>
+            <div class="card-body">
+              <div class="table-responsive dataTables_wrapper dt-bootstrap4">
+                <table class="table table-bordered" id="transactionTable" cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Created</th>
+                            <th>Options</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                      <% if (data.length > 0) {%>
+                        <% for (i=0; i<data.length; i++){%>
+                          
+                          <% if(data[i].deleted == null && data[i].status == 'archived') {%>
+                          <tr>
+                          <td><a href="/notescontent?uuid=<%=data[i].uuid%>"><%=data[i].title%></td>
+                          <td><%=data[i].created%></td>
+                          <td>
+                            <form action="/delete?uuid=<%=data[i].uuid%>" method="post">
+                              <button type="submit" name="uuid" value="<%=data[i].uuid%>" class="btn btn-danger">
+                                <i class="material-icons">delete</i>
+                              </button>
+                            </form>
+                            <form action="/unarchive?uuid=<%=data[i].uuid%>" method="post">
+                              <button type="submit" name="uuid" value="<%=data[i].uuid%>" class="btn btn-success">
+                                <i class="material-icons">unarchive</i></button>
+                            </form>
+                          </td>
+                          </tr>
+                          <%}%>
+                        <%}%>
+                      <%}%>
+                    </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- /.container-fluid -->
 
@@ -157,6 +192,34 @@
   <a class="scroll-to-top rounded" href="#page-top">
     <i class="fas fa-angle-up"></i>
   </a>
+
+  <!--Add Item Modal-->
+  <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Add Notes</h5>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button type="submit" value="Add">
+        </div>
+        <form method="POST" action="/addnotes">
+        <div class="modal-body">
+          <div class="form-group">
+            <input type="text" class="form-control form-control-user" name="title" aria-describedby="emailHelp" placeholder="Enter title">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control form-control-user" name ="content" placeholder="Enter content">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+          <button class="btn btn-secondary" type="submit">Add</button>
+        </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Logout Modal-->
   <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
