--- a/views/updatenotes.ejs
+++ b/views/updatenotes.ejs
@@ -14,7 +14,7 @@
   <!-- Custom fonts for this template-->
   <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 <!--  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">-->
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- Custom styles for this template-->
   <link href="/css/sb-admin-2.min.css" rel="stylesheet">
 
@@ -54,7 +54,7 @@
           <span>Actions</span></a>
 		  <div id="collapseUtilities" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="noteslist">Notes</a>
+            <a class="collapse-item" href="notes">Notes</a>
             <a class="collapse-item" href="archivednotes">Archived Notes</a>
           </div>
         </div>
@@ -130,7 +130,8 @@
                         <br><br>
                     </div>
                 </div> 
-                    <button type="submit" name="uuid" value="<%=data[0].uuid%>" class="btn btn-secondary">Update</button>
+                    <button type="submit" name="uuid" value="<%=data[0].uuid%>" class="btn btn-success">
+                      <i class="material-icons">save</i></button>
             </form>
         </div>
         <!-- /.container-fluid -->
