--- a/views/archivednotes.ejs
+++ b/views/archivednotes.ejs
@@ -120,13 +120,10 @@
         <!-- End of Topbar -->
         <!-- Begin Page Content -->
         <div class="container-fluid">
-          <div>
-            <button class="btn btn-info" data-target="#addModal" data-toggle="modal">Add Notes</button>
-          </div>
           <!-- DataTales Example -->
-          <div class=" card shadow mb-4 col-lg-12 float-left">
+          <div class=" card shadow mb-4 col-lg-12 float-left p-1">
             <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">Content Table</h6>
+              <h6 class="m-0 font-weight-bold text-primary">Archived Notes</h6>
             </div>
             <div class="card-body">
               <div class="table-responsive dataTables_wrapper dt-bootstrap4">
