--- Auto-Git Commit ---

--- a/views/notescontent.ejs
+++ b/views/notescontent.ejs
@@ -161,7 +161,7 @@
                     </div>
                   <%}%>
                 <%}else{%>
-                  <p>Please login to vote</p>
+                  <p>Please login or create an account. Don't worry, we won't force you to put your real names so you can appear anonymous.</p>
                 <%}%>
               </div>
             <%}%>
